Loads of changes made.

--- a/Views/AddTransactionPage.xaml
+++ b/Views/AddTransactionPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Expense_Tracker_v1._0.Views.DashboardPage"
+    x:Class="Expense_Tracker_v1._0.Views.AddTransactionPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,11 +14,11 @@
 
         <TextBlock
             Grid.Row="0"
-            x:Uid="Dashboard_Title"
+            x:Uid="AddTransaction_Title"
             Style="{StaticResource PageTitleStyle}" />
 
         <Grid Grid.Row="1">
-            <Button Click="Button_Click">Make a Database!</Button>
+            
         </Grid>
         
     </Grid>
