--- a/Views/ShellPage.xaml
+++ b/Views/ShellPage.xaml
@@ -20,17 +20,20 @@
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="200" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <MenuBar Grid.Column="0">
+            <AppBarButton Icon="Back" Grid.Column="0"/>
+            <MenuBar Grid.Column="1">
                 <!--
                 TODO: Update item titles by updating <x:Uid>.Text entries in Strings/en-us/Resources.resw.
                 https://docs.microsoft.com/windows/uwp/app-resources/localize-strings-ui-manifest#refer-to-a-string-resource-identifier-from-xaml
                 -->
-                <MenuBarItem x:Uid="ShellMenuBarItem_File">
-                    <MenuFlyoutItem x:Uid="ShellMenuItem_File_Exit" Command="{x:Bind ViewModel.MenuFileExitCommand}" />
-                </MenuBarItem>
+
                 <MenuBarItem x:Uid="ShellMenuBarItem_Views">
                     <MenuBarItem.Items>
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Dashboard" Command="{x:Bind ViewModel.MenuViewsDashboardCommand}" />
@@ -39,8 +42,18 @@
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Sample" Command="{x:Bind ViewModel.MenuViewsSampleCommand}" />
                     </MenuBarItem.Items>
                 </MenuBarItem>
+
+                <MenuBarItem x:Uid="ShellMenuBarItem_Add">
+                    <MenuFlyoutItem x:Uid="ShellMenuItem_Add_Account" Click="AddAccount_Click" />
+                    <MenuFlyoutItem x:Uid="ShellMenuItem_Add_Transaction" Click="AddTransaction_Click" />
+
+                </MenuBarItem>
             </MenuBar>
-            <AppBarButton Grid.Column="1" x:Name="ShellMenuBarSettingsButton" x:Uid="ShellMenuBarSettingsButton"
+            <AppBarSeparator Grid.Column="2"/>
+
+            <AutoSuggestBox Height="32" PlaceholderText="Search Transactions" Grid.Column="4" QueryIcon="Find"/>
+
+            <AppBarButton Grid.Column="5" x:Name="ShellMenuBarSettingsButton" x:Uid="ShellMenuBarSettingsButton"
                           AnimatedIcon.State="Normal"
                           PointerEntered="ShellMenuBarSettingsButton_PointerEntered"
                           PointerExited="ShellMenuBarSettingsButton_PointerExited"
@@ -58,5 +71,47 @@
         <Grid Grid.Row="2" Margin="{StaticResource MenuBarContentMargin}">
             <Frame x:Name="NavigationFrame" />
         </Grid>
+        
+        
+        
+        
+        
+
+        <ContentDialog x:Name="addTransactionDialog"
+           PrimaryButtonText="Add" IsPrimaryButtonEnabled="False" CloseButtonText="Cancel">
+            <ContentDialog.TitleTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Add New Transaction"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ContentDialog.TitleTemplate>
+            <StackPanel>
+                <ComboBox Header="Account Holder:" PlaceholderText="Select" Margin="0,10,0,0">
+                    <x:String>Blue</x:String>
+                    <x:String>Green</x:String>
+                    <x:String>Red</x:String>
+                    <x:String>Yellow</x:String>
+                </ComboBox>
+                <CalendarDatePicker PlaceholderText="Pick a date" Header="Date of Transaction" Margin="0,10,0,0"/>
+                <TextBox Header="Payee" PlaceholderText="" Margin="0,10,0,0"></TextBox>
+                <NumberBox x:Name="ATFormattedNumberBox" Header="Enter amount:" PlaceholderText="0.00" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ContentDialog>
+
+        <ContentDialog x:Name="addAccountDialog"
+           PrimaryButtonText="Add" IsPrimaryButtonEnabled="False" CloseButtonText="Cancel">
+            <ContentDialog.TitleTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Add New Account"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ContentDialog.TitleTemplate>
+            <StackPanel>
+                <TextBox Header="Holder's Name" PlaceholderText="" Margin="0,10,0,0"></TextBox>
+                <NumberBox x:Name="AAFormattedNumberBox" Header="Starting Balance:" PlaceholderText="0.00" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ContentDialog>
     </Grid>
 </Page>
