--- a/Views/AccountsListPage.xaml
+++ b/Views/AccountsListPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Expense_Tracker_v1._0.Views.SamplePage"
+    x:Class="Expense_Tracker_v1._0.Views.AccountsListPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +14,7 @@
 
         <TextBlock
             Grid.Row="0"
-            x:Uid="Sample_Title"
+            x:Uid="AccountsList_Title"
             Style="{StaticResource PageTitleStyle}" />
 
         <Grid Grid.Row="1">
