--- a/Views/ShellPage.xaml
+++ b/Views/ShellPage.xaml
@@ -38,8 +38,8 @@
                     <MenuBarItem.Items>
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Dashboard" Command="{x:Bind ViewModel.MenuViewsDashboardCommand}" />
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_ListView" Command="{x:Bind ViewModel.MenuViewsListViewCommand}" />
+                        <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Accounts" Command="{x:Bind ViewModel.MenuViewsAccountsCommand}" />
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Payables" Command="{x:Bind ViewModel.MenuViewsPayablesCommand}" />
-                        <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Sample" Command="{x:Bind ViewModel.MenuViewsSampleCommand}" />
                     </MenuBarItem.Items>
                 </MenuBarItem>
 
@@ -109,7 +109,7 @@
             </StackPanel>
         </ContentDialog>
 
-        <ContentDialog x:Name="startupDialog" PrimaryButtonText="Create" IsPrimaryButtonEnabled="True" SecondaryButtonText="Open Existing" IsSecondaryButtonEnabled="True" CloseButtonText="Cancel">
+        <ContentDialog x:Name="startupDialog" DefaultButton="Primary" PrimaryButtonText="Create" IsPrimaryButtonEnabled="True" SecondaryButtonText="Open Existing" IsSecondaryButtonEnabled="True" CloseButtonText="Cancel">
             <StackPanel>
                 <TextBlock FontSize="24">New Cash Pool</TextBlock>
                 <TextBox x:Name="newPoolName"  Header="Pool Name" PlaceholderText="" Margin="0,10,0,0"></TextBox>
