--- a/Views/ShellPage.xaml
+++ b/Views/ShellPage.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:animatedvisuals="using:Microsoft.UI.Xaml.Controls.AnimatedVisuals"
+    xmlns:animatedvisuals="using:Microsoft.UI.Xaml.Controls.AnimatedVisuals" xmlns:models="using:Expense_Tracker_v1._0.Core.Models"
     Loaded="OnLoaded"
     Unloaded="OnUnloaded"
     mc:Ignorable="d">
@@ -82,12 +82,7 @@
                 </DataTemplate>
             </ContentDialog.TitleTemplate>
             <StackPanel>
-                <ComboBox Name="fromAccountInput" Header="Account Holder:" PlaceholderText="Select" Margin="0,10,0,0">
-                    <x:String>Blue</x:String>
-                    <x:String>Green</x:String>
-                    <x:String>Red</x:String>
-                    <x:String>Yellow</x:String>
-                </ComboBox>
+                <ComboBox Name="fromAccountInput" Header="Account Holder:" PlaceholderText="Select" Margin="0,10,0,0" ItemsSource="{x:Bind ViewModel.Accounts}"/>
                 <CalendarDatePicker Name="dateInput" PlaceholderText="Pick a date" Header="Date of Transaction" Margin="0,10,0,0"/>
                 <TextBox Name="payeeInput" Header="Payee" PlaceholderText="" Margin="0,10,0,0"></TextBox>
                 <NumberBox Name="valueInput" Header="Enter amount:" PlaceholderText="0.00" Margin="0,10,0,0"/>
@@ -95,7 +90,7 @@
         </ContentDialog>
 
         <ContentDialog x:Name="addAccountDialog"
-           PrimaryButtonText="Add" IsPrimaryButtonEnabled="True" CloseButtonText="Cancel" PrimaryButtonClick="addEventDialog_PrimaryButtonClick">
+           PrimaryButtonText="Add" IsPrimaryButtonEnabled="True" CloseButtonText="Cancel" PrimaryButtonClick="addAccountDialog_PrimaryButtonClick">
             <ContentDialog.TitleTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -113,11 +108,28 @@
             <StackPanel>
                 <TextBlock FontSize="24">New Cash Pool</TextBlock>
                 <TextBox x:Name="newPoolName"  Header="Pool Name" PlaceholderText="" Margin="0,10,0,0"></TextBox>
+                <ListView
+                    x:Name="existingPoolsList"
+                    ItemsSource="{x:Bind Source}"
+                    BorderThickness="1"
+                    BorderBrush="{ThemeResource SystemControlForegroundBaseMediumLowBrush}"
+                    Width="350"
+                    Height="400"
+                    HorizontalAlignment="Left">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Pool">
+                            <TextBlock Text="{x:Bind name}" x:Phase="1" Margin="0,5,0,5"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+
             </StackPanel>
         </ContentDialog>
+        
+        
     </Grid>
 
     <Page.Resources>
-
     </Page.Resources>
 </Page>
