--- a/Views/ShellPage.xaml
+++ b/Views/ShellPage.xaml
@@ -38,9 +38,8 @@
                     <MenuBarItem.Items>
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Dashboard" Command="{x:Bind ViewModel.MenuViewsDashboardCommand}" />
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_ListView" Command="{x:Bind ViewModel.MenuViewsListViewCommand}" />
-                        <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Accounts" Command="{x:Bind ViewModel.MenuViewsAccountsCommand}" />
+                        <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Accounts" Command="{x:Bind ViewModel.MenuViewsAccCommand}" />
                         <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Payables" Command="{x:Bind ViewModel.MenuViewsPayablesCommand}" />
-                        <MenuFlyoutItem x:Uid="ShellMenuItem_Views_AccTest" Command="{x:Bind ViewModel.MenuViewsAccCommand}" />
                     </MenuBarItem.Items>
                 </MenuBarItem>
 
@@ -83,7 +82,7 @@
                 </DataTemplate>
             </ContentDialog.TitleTemplate>
             <StackPanel>
-                <ComboBox Name="fromAccountInput" Header="Account Holder:" PlaceholderText="Select" Margin="0,10,0,0" ItemsSource="{x:Bind ViewModel.Accounts}"/>
+                <ComboBox IsEditable="True" Name="fromAccountInput" Header="Account Holder:" PlaceholderText="Select" Margin="0,10,0,0" ItemsSource="{x:Bind ViewModel.Accounts}"/>
                 <CalendarDatePicker Name="dateInput" PlaceholderText="Pick a date" Header="Date of Transaction" Margin="0,10,0,0"/>
                 <TextBox Name="payeeInput" Header="Payee" PlaceholderText="" Margin="0,10,0,0"></TextBox>
                 <NumberBox Name="valueInput" Header="Enter amount:" PlaceholderText="0.00" Margin="0,10,0,0"/>
@@ -101,7 +100,7 @@
             </ContentDialog.TitleTemplate>
             <StackPanel>
                 <TextBox x:Name="accountNameInput"  Header="Holder's Name" PlaceholderText="" Margin="0,10,0,0"></TextBox>
-                <NumberBox x:Name="balanceInput" Header="Starting Balance:" PlaceholderText="0.00" Margin="0,10,0,0"/>
+                <NumberBox x:Name="balanceInput" Header="Starting Balance:" PlaceholderText="0.00" Value="0" Margin="0,10,0,0"/>
             </StackPanel>
         </ContentDialog>
 
