--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -18,7 +18,7 @@
             Style="{StaticResource PageTitleStyle}" />
 
         <Grid Grid.Row="1">
-            <StackPanel Padding="24" Background="DimGray" BorderThickness="1" Height="256" CornerRadius="4" >
+            <StackPanel Padding="24" Background="{StaticResource SystemAccentColor}" BorderThickness="1" Height="256" CornerRadius="4" >
                 <StackPanel HorizontalAlignment="Right">
                     <TextBlock FontSize="32">
                             <Run Text="Rs."/>
@@ -39,12 +39,20 @@
                 </StackPanel>
 
             </StackPanel>
-            <ItemsRepeater>
 
-            </ItemsRepeater>
         </Grid>
     </Grid>
     <Page.Resources>
+
+        <UniformGridLayout x:Key="UniformGridLayout2" MinItemWidth="108" MinItemHeight="108"
+                   MinRowSpacing="12" MinColumnSpacing="12"/>
+        
+        <DataTemplate x:Key="SimpleItemTemplate" x:DataType="x:Int32">
+            <Button HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+	    Background="{ThemeResource SystemChromeLowColor}">
+
+            </Button>
+        </DataTemplate>
 
     </Page.Resources>
 </Page>
